# PAQLang

./: .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  changelog.md  docker-compose.yaml  env-example  pyproject.toml  requirements.txt
.github/workflows/: lint-flake8.yml  lint.yml  new-release.yml  pytest.yml  python-publish.yml  release.yml
docs/ru/: boolopers.md  controlopers.md  dateopers.md  dictopers.md  functions.md  githubopers.md  gitlabopers.md  ioopers.md  mathopers.md  oracleopers.md  otheropers.md  queueopers.md  release.md  stringopers.md  topic.md
src/paqlang/: __Init__.py  __init__.py  _version.py  aio_github.py  data.py  param.py  program.py  utils.py
src/paqlang/ext/: aio_github.py  aio_gitlab.py  github_opers.py  gitlab_opers.py  oracle_opers.py
src/paqlang/functions/: aio_gitlab.py  bool_opers.py  control_opers.py  date_opers.py  dict_opers.py  github_opers.py  gitlab_opers.py  io_opers.py  math_opers.py  other_opers.py  queue_opers.py  string_opers.py  util_opers.py
src/tests/gitlab/: conftest.py  test_gitlab_commits.py  test_gitlab_freads.py
tests/: conftest.py  conftest1.py  test_bool_true.py  test_call.py  test_freads.py  test_gitlab_branches.py  test_gitlab_commits.py  test_gitlab_diff.py  test_gitlab_freads.py  test_gitlab_projects.py  test_gitlab_tags.py  test_gitlab_walk.py  test_in.py  test_include.py  test_last.py  test_len.py  test_minus.py  test_msleep.py  test_not.py  test_plane.py  test_send_error.py  test_send_errors.py  test_union_all.py  test_walk.py  test_while.py
tests/github/: conftest.py  test_github_branches.py  test_github_commits.py  test_github_diff.py  test_github_freads.py  test_github_projects.py  test_github_tags.py  test_github_walk.py  test_gitlab_freads.py  test_gitlab_tags.py
tests/gitlab/: conftest.py  test_gitlab_branches.py  test_gitlab_commits.py  test_gitlab_diff.py  test_gitlab_freads.py  test_gitlab_projects.py  test_gitlab_tags.py  test_gitlab_walk.py
tests/main/: conftest.py  test_add.py  test_attr.py  test_bool_false.py  test_bool_true.py  test_break.py  test_call.py  test_continue.py  test_dec.py  test_distinct.py  test_div.py  test_do_in.py  test_error.py  test_exit.py  test_expand.py  test_filter.py  test_first.py  test_freads.py  test_if.py  test_in.py  test_inc.py  test_include.py  test_info.py  test_join.py  test_last.py  test_len.py  test_match.py  test_minus.py  test_msleep.py  test_mul.py  test_not.py  test_now.py  test_opers.py  test_out.py  test_parallel.py  test_param.py  test_plane.py  test_pop.py  test_print.py  test_program_as_json.py  (+16 more)
tests/main-workerd/: test_include.py  test_popers.py
tests/oracle/: conftest.py  test_oracle_execute.py  test_oracle_execute_github.py  test_oracle_execute_gitlab.py  test_oracle_fetchall.py  test_oracle_fetchone.py
tests/service/: conftest.py  test_popers.py
tests/services/: conftest.py  test_popers.py
(+26 files in other folders)
