[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PAQLang"
version = "0.0.1"
authors = [
  { name="Sergey Strukov", email="strukovsv@main.ru" },
]
description = "Python Async Queue Language"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
'aiofiles==23.2.1',
'PyYAML==6.0.1',
'ruamel.yaml==0.18.6',
'ruamel.yaml.clib==0.2.8',
'ruamel.yaml.string==0.1.1',
'requests==2.31.0',
'boto3==1.34.54',
'environs==9.5.0',
'httpx==0.27.0']

[project.urls]
Homepage = "https://github.com/strukovsv/PAQLang"
Issues = "https://github.com/strukovsv/PAQLang/issues"