[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "PAQLang"
#version = "0.0.6"
dynamic = ["version"]

authors = [
  { name="Sergey Strukov", email="strukovsv@main.ru" },
]

description = "Python Async Queue Language"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
]

dependencies = [
'aiofiles==23.2.1',
'PyYAML==6.0.1',
'ruamel.yaml==0.18.6',
'ruamel.yaml.clib==0.2.8',
'ruamel.yaml.string==0.1.1',
'requests==2.31.0',
'boto3==1.34.54',
'environs==9.5.0']

[project.optional-dependencies]
all = [
'httpx==0.27.0',
'chardet==5.2.0',
'cx_Oracle_async==0.3.3'
]

[tool.setuptools.dynamic]
version = { attr = "paqlang._version.VERSION" }

[project.urls]
Homepage = "https://github.com/strukovsv/PAQLang"
Issues = "https://github.com/strukovsv/PAQLang/issues"
